--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,9 +25,9 @@
 			and on digital scans available at<br/>
 			<a href="https://books.google.com/books?id=ULZEAAAAYAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="WIKILINK">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">The Muezzin</i>,<br/>
+			a painting completed in 1866 by<br/>
+			<a href="https://en.wikipedia.org/wiki/Jean-L%C3%A9on_G%C3%A9r%C3%B4me">Jean-Léon Gérôme</a>.<br/>
 			The cover and title pages feature the<br/>
 			<span epub:type="se:name.visual-art.typeface">League Spartan</span> and <span epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</span><br/>
 			typefaces created in 2014 and 2009 by<br/>
