--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,76 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: <span epub:type="subtitle">CHAPTERTITLE</span></a>
+					<a href="text/chapter-1.xhtml">The Thwackings</a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml">And This Is the Story of Bhanavar the Beautiful</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml">The Betrothal</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml">And This Is the Punishment of Shahpesh, the Persian, on Khipil, the Builder</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml">The Genie Karaz</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml">The Well of Paravid</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml">The Horse Garraveen</a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml">The Talking Hawk</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml">Goorelka of Oolb</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml">The Lily of the Enchanted Sea</a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml">And This Is the Story of Noorna Bin Noforka, the Genie Karaz, and the Princess of Oolb</a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml">The Wiles of Rabesqurat</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml">The Palace of Aklis</a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml">The Sons of Aklis</a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml">The Sword of Aklis</a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml">Koorookh</a>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml">The Veiled Figure</a>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml">The Bosom of Noorna</a>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml">The Revival</a>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml">The Plot</a>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml">The Dish of Pomegranate Grain</a>
+				</li>
+				<li>
+					<a href="text/chapter-22.xhtml">The Burning of the Identical</a>
+				</li>
+				<li>
+					<a href="text/chapter-23.xhtml">The Flashes of the Blade</a>
+				</li>
+				<li>
+					<a href="text/chapter-24.xhtml">Conclusion</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +103,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORKTITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The Shaving of Shagpat</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
