--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -44,7 +44,7 @@
 					<a href="text/chapter-10.xhtml">The Lily of the Enchanted Sea</a>
 				</li>
 				<li>
-					<a href="text/chapter-11.xhtml">And This Is the Story of Noorna Bin Noforka, the Genie Karaz, and the Princess of Oolb</a>
+					<a href="text/chapter-11.xhtml">And This Is the Story of Noorna Bin Noorka, the Genie Karaz, and the Princess of Oolb</a>
 				</li>
 				<li>
 					<a href="text/chapter-12.xhtml">The Wiles of Rabesqurat</a>
